# RotatingTeapot

./: CMakeLists.txt  bzlteapot.cpp  ctrlpoints.h  main.cpp  teapot.cpp  teapot.h  test.cpp
